--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="lock"><i class="fas fa-lock-open"></i></button>
             </div>
             <div class="sliders">
-                <div class="button-close-adjustment">X</div>
+                <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0" autocomplete="off">
 
@@ -43,7 +43,7 @@
                 <button class="lock"><i class="fas fa-lock-open"></i></button>
             </div>
             <div class="sliders">
-                <div class="button-close-adjustment">X</div>
+                <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1" autocomplete="off">
 
@@ -65,7 +65,7 @@
                 <button class="lock"><i class="fas fa-lock-open"></i></button>
             </div>
             <div class="sliders">
-                <div class="button-close-adjustment">X</div>
+                <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2" autocomplete="off">
 
@@ -87,7 +87,7 @@
                 <button class="lock"><i class="fas fa-lock-open"></i></button>
             </div>
             <div class="sliders">
-                <div class="button-close-adjustment">X</div>
+                <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3" autocomplete="off">
 
@@ -109,7 +109,7 @@
                 <button class="lock"><i class="fas fa-lock-open"></i></button>
             </div>
             <div class="sliders">
-                <div class="button-close-adjustment">X</div>
+                <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3" autocomplete="off">
 
@@ -123,7 +123,7 @@
         </div>
 
         <!------------------------- 5TH COLOR ------------------------->
-        <div class="color">
+        <!-- <div class="color">
             <h2>Hex</h2>
             <div class="controls">
                 <button class="adjust"><i class="fas fa-sliders-h"></i></button>
@@ -141,7 +141,7 @@
                 <span>Saturation</span>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="4" autocomplete="off">  
             </div>
-        </div>
+        </div> -->
 
     </div>
     <!---------------------------- COLOR SECTION END ------------------------- -->
