--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Color Palette Library</title>
 </head>
+
 <body>
 
     <!---------------------------- COLOR SECTION START ------------------------- -->
@@ -24,14 +26,17 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0" autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0"
+                    autocomplete="off">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="0" autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="0"
+                    autocomplete="off">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-hue="0" autocomplete="off">  
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-hue="0"
+                    autocomplete="off">
             </div>
         </div>
 
@@ -45,14 +50,17 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1" autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1"
+                    autocomplete="off">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="1" autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="1"
+                    autocomplete="off">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1" autocomplete="off">  
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1"
+                    autocomplete="off">
             </div>
         </div>
 
@@ -67,14 +75,17 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2" autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2"
+                    autocomplete="off">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="2" autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="2"
+                    autocomplete="off">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2" autocomplete="off">  
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2"
+                    autocomplete="off">
             </div>
         </div>
 
@@ -89,19 +100,22 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3" autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3"
+                    autocomplete="off">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3" autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3"
+                    autocomplete="off">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3" autocomplete="off">  
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3"
+                    autocomplete="off">
             </div>
         </div>
 
 
-                <!------------------------- 4TH COLOR ------------------------->
+        <!------------------------- 4TH COLOR ------------------------->
         <div class="color">
             <h2>Hex</h2>
             <div class="controls">
@@ -111,14 +125,17 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3" autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3"
+                    autocomplete="off">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3" autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3"
+                    autocomplete="off">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3" autocomplete="off">  
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3"
+                    autocomplete="off">
             </div>
         </div>
 
@@ -189,9 +206,13 @@
             <h4>Select Palette</h4>
         </div>
     </div>
-    
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"
+        integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./app.js"></script>
 </body>
+
 </html>
