--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Office:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="#">
     <title>Color Palette Library</title>
 </head>
 
@@ -26,17 +27,14 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0"
-                    autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="0"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="0">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-hue="0"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="0">
             </div>
         </div>
 
@@ -50,17 +48,14 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1"
-                    autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="1"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="1">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1">
             </div>
         </div>
 
@@ -75,17 +70,14 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2"
-                    autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="2"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="2">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
             </div>
         </div>
 
@@ -100,17 +92,14 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3">
             </div>
         </div>
 
@@ -125,17 +114,14 @@
             <div class="sliders">
                 <button class="button-close-adjustment">X</button>
                 <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3">
 
 
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="brightness" class="bright-input" data-bright="3">
 
                 <span>Saturation</span>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3"
-                    autocomplete="off">
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3">
             </div>
         </div>
 
