--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p>Generate</p>
         </div>
         <div class="save-panel">
-            <button class="generate"><i class="fas fa-save"></i></button>
+            <button class="save"><i class="fas fa-save"></i></button>
             <p>Save</p>
         </div>
     </div>
@@ -180,7 +180,7 @@
             <button class="close-save">X</button>
             <h4>Name of Palette</h4>
             <input type="text" max-length="35" class="save-name">
-            <button type="submit" class="submit-sasve">Save</button>
+            <button type="submit" class="submit-save">Save</button>
         </div>
     </div>
 
